--- a/assets/defaults.scss
+++ b/assets/defaults.scss
@@ -1,8 +1,16 @@
+$background-color: #0a1b22;
+$box-shadow: #193a46;
+$button: #4f98a5;
+$button-hover: #306771;
+$light-blue: #70d7d6;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Roboto:ital@1&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: 'Cabin', sans-serif;
 }
 
 // app transitions
@@ -17,7 +25,7 @@
 }
 
 .app {
-  background-color: #211f1f;
+  background-color: $background-color;
   min-height: 100vh;
 }
 
@@ -26,7 +34,7 @@
   text-decoration: none;
   color: inherit;
   padding: 8px 16px;
-  background-color: #c92502;
+  background-color: $button;
   border: none;
   color: #fff;
   border-radius: 4px;
@@ -34,7 +42,7 @@
   transition: 0.3s ease all;
 
   &:hover {
-    background-color: #891b02;
+    background-color: $button-hover;
   }
 }
 
