added flip card effect to movie cards

--- a/assets/defaults.scss
+++ b/assets/defaults.scss
@@ -38,6 +38,7 @@ $light-blue: #70d7d6;
   border: none;
   color: #fff;
   border-radius: 4px;
+  width: 130px;
   cursor: pointer;
   transition: 0.3s ease all;
 
